--- a/build.xml
+++ b/build.xml
@@ -21,10 +21,10 @@
   <target name="compile" 
         description="compile the source">
     <!-- Compile the Java code from ${src} into ${build} -->
-    <javac classpath="lib/20190908.jar" includeantruntime="false" srcdir="${src}" destdir="${build}"/>
+    <javac classpath="lib/20190908.jar" includeantruntime="false" srcdir="src/dnd" destdir="${build}"/>
 
     <!-- Echo the exact command line required for running your program -->
-    <echo message = "To run type: java -cp lib/20190908.jar cli/Main"/>
+    <echo message = "To run type: java -cp lib/20190908.jar:.:build dnd/dungeon"/>
   </target>
 
  
