removed the old jar file and added it to the /gitignore file. Updated the description for the build.xml file

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="A1" default="compile" basedir=".">
   <description>
-    simple example build file
+    Buildfile for OOP a1.
   </description>
   <!-- set global properties for this build -->
   <property name="src" location="src/"/>
